Add index endpoint, test out nested routes
